--- a/finance_advisor/frontend/.streamlit/config.toml
+++ b/finance_advisor/frontend/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#0A84FF"
-backgroundColor="#F7F9FC"
+primaryColor="#0070C9"            # Apple blue
+backgroundColor="#F5F5F7"
 secondaryBackgroundColor="#FFFFFF"
 textColor="#1C1C1E"
 font="sans serif"
